--- a/src/signUp/signUp.module.css
+++ b/src/signUp/signUp.module.css
@@ -1,7 +1,7 @@
 .app-signUp-container{
     width:100vw;
     height: 100vh;
-    background-color: aqua;
+    background-color: gray;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,7 +9,7 @@
 .signUp-main-container{
     width:40vw;
     height: 90vh;
-    background-color: rgb(134, 199, 72);
+    background-color: white;
     display: flex;
     flex-direction: column;
    
@@ -54,5 +54,5 @@
     margin-right: 10px;
 }
 .signUp-form>button{
-   background-color: lightblue;
+   background-color:lightgray ;
 }
